crates/frontend/tests/snapshots/lib__type_errors@unknown_function.nemo.snap
---
source: crates/frontend/tests/lib.rs
assertion_line: 104
expression: output
input_file: crates/frontend/tests/type_errors/unknown_function.nemo
---
[05] Error: Unknown variable unknown
   ╭─[source:2:1]
   │
 2 │   unknown()
   │   ───┬───  
   │      ╰───── Unknown variable unknown
───╯
