crates/frontend/tests/snapshots/lib__type_errors@unknown_type.nemo.snap
---
source: crates/frontend/tests/lib.rs
assertion_line: 104
expression: output
input_file: crates/frontend/tests/type_errors/unknown_type.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:1:13]
   │
 1 │ fn main() -> Unknown {}
   │              ───┬───  
   │                 ╰───── Unknown type Unknown
───╯
