crates/frontend/tests/snapshots/lib__type_errors@unknown_variant.nemo.snap
---
source: crates/frontend/tests/lib.rs
assertion_line: 104
expression: output
input_file: crates/frontend/tests/type_errors/unknown_variant.nemo
---
[07] Error: Unknown type Unknown
   ╭─[source:2:1]
   │
 3 │     Unknown::C _ => {}
   │     ───┬───  
   │        ╰───── Unknown type Unknown
───╯
